fixes #134 #135 and corrected state.xml